<resources>
    <string name="app_name">Cozee</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="bookmark_fragment">Bookmark Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="annoucements">Annoucements:</string>
    <string name="welcome_to_cozee">WELCOME TO COZEE</string>
    <string name="official_logo">official logo</string>
    <string name="themechangeicon">themechangeicon</string>
    <string name="avataricon">avataricon</string>
    <string name="put_fragment_in_center_to_display_conversations">Put recyclerview in center to display conversations.</string>
    <string name="put_maps_api_in_center">Put maps API in center</string>
    <string name="put_recyclerview_in_center_to_show_bookmarks">Put recyclerview in center to show bookmarks</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="photoofcoffeeshop">PhotoOfCoffeeShop</string>
    <string name="set_silent_period">Set Silent Period</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="list_of_settings">list of settings</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="are_you_sure_about_deleting_your_account_everything_will_be_erased_and_cannot_be_accessed_again">Are you sure about deleting your account? Everything will be erased and cannot be accessed again.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_you_want_log_out_of_this_account">Do you want log out of this account?</string>
    <string name="yes_dos">YES</string>
    <string name="no_dos">NO</string>

    <string-array name="radius_options">
        <item>1 km</item>
        <item>2 km</item>
        <item>3 km</item>
        <item>4 km</item>
        <item>5 km</item>
        <item>6 km</item>
        <item>7 km</item>
        <item>8 km</item>
        <item>9 km</item>
        <item>10 km</item>
    </string-array>

    <string-array name="map_style_options">
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Normal</item>
    </string-array>

    <string-array name="price_options">
        <item>Not Selected</item>
        <item>Inexpensive</item>
        <item>Moderate</item>
        <item>Expensive</item>
        <item>Very Expensive</item>
    </string-array>



    <string name="using_current_location">Using Current Location</string>
    <string name="location_selected">Location Selected</string>
    <string name="location_cancelled">Location selection cancelled</string>
    <string name="location_disabled">Location services disabled</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="permission_needed">Location permission is required to use this feature</string>
    <string name="permission_denied">Permission denied</string>
    <string name="google_maps_key">AIzaSyB-gQe2ZezzKjtyMZirdWv9G1oyqc0Kggc</string> <!-- Replace with actual API key -->
    <string name="default_map_style">Standard</string>
    <string name="no_location_selected">No location selected</string>
    <string name="this_is_the_bookmark_button">This is the bookmark button.</string>
    <string name="this_is_the_chat_button">This is the Chat button.</string>
    <string name="_2">Bookmark</string>
    <string name="reviews">Reviews</string>
    <string name="chat_feature">chat feature</string>
    <string name="bookmark_feature">bookmark feature</string>
    <string name="cozee_logo">Cozee Logo</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="choose_default_avatar">choose default avatar</string>

</resources>