<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/cozeeLogoSignup"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/cozee_logo"
        app:srcCompat="@drawable/cozee_logo" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="cozee_username"
        android:hint="@string/enter_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="cozee@email.com"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password12345"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password12345"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/buttonFinishSignup"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/create_account"
        android:layout_marginTop="16dp"/>

</LinearLayout>
