<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/cozee_logo"
        android:layout_gravity="center"
        android:contentDescription="@string/cozee_logo" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="cozee_username"
        android:hint="@string/enter_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password12345"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/signup" />
</LinearLayout>
