<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <ImageButton
        android:id="@+id/avatarbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/avataricon"
        android:src="@drawable/avatar" />

    <ImageButton
        android:id="@+id/themechangebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="-55dp"
        android:contentDescription="@string/themechangeicon"
        android:src="@drawable/light_mode"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/titleofapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_cozee"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="40sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/official_logo"
        android:src="@drawable/offical_logo" />

    <TextView
        android:id="@+id/announcementsmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/annoucements"
        android:textSize="20sp" />


</LinearLayout>