<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/info_image"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:contentDescription="@string/photoofcoffeeshop"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:gravity="center">

            <Button
                android:id="@+id/bookmark_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bookmark_feature"
                android:minWidth="100dp"
                android:text="@string/_2" />
            <Button
                android:id="@+id/chat_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:contentDescription="@string/chat_feature"
                android:text="@string/reviews"
                />
        </LinearLayout>
    </LinearLayout>



    <TextView
        android:id="@+id/info_title"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/info_address"
        android:textColor="#555"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="350dp"/>

    <TextView
        android:id="@+id/info_rating"
        android:textColor="#888"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>